XMLHttpRequest performs too many copies for ArrayBuffer results https://bugs.webkit.org/show_bug.cgi?id=117458

Patch by Wojciech Bielawski <w.bielawski@samsung.com> on 2014-02-05
Reviewed by Alexey Proskuryakov.

Based on blink change: https://chromium.googlesource.com/chromium/blink/+/bed266aa5a43f7c080c87e527bd35e2b80ecc7b7

Add SharedBuffer::createArrayBuffer() and use it to create XMLHttpRequest's response in ArrayBuffer
This cuts
    - two memsets (in ArrayBuffer::create and SharedBuffer::m_buffer::resize)
    - one copy (SharedBuffer::m_buffer to ArrayBufferContents::m_data)
    - one allocation (SharedBuffer::m_buffer)

Source/JavaScriptCore:

* runtime/ArrayBuffer.h:

Source/WebCore:

No new tests. WebKit desn't provide test mechanism similar to blink's one.

* platform/SharedBuffer.cpp:
(WebCore::SharedBuffer::createArrayBuffer):
* platform/SharedBuffer.h:
* xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::responseArrayBuffer):

Canonical link: https://commits.webkit.org/146244@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163444 268f45cc-cd09-0410-ab3c-d52691b4dbfc